# goit-web-hw-04

./: Dockerfile  index.html  main.py  message.html  pyproject.toml
templates/: messages.html
