[tool.poetry]
name = "goit-pyweb-hw-04"
version = "0.1.0"
description = ""
authors = ["Anton Vasyliev <anton12vasyliev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
